# Jisa

./: .dockerignore  .gitignore  .ubsan-ignorelist  CLAUDE.md  CMakeLists.txt  DECISIONS.md  Dockerfile  PLAN.md  README.md  SPEC.md  VERIFICATION.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: implementer.md  researcher.md  reviewer.md  test-writer.md
.claude/skills/cpp-conventions/: SKILL.md
.claude/skills/domain-card-format/: SKILL.md
.claude/skills/fault-injection/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_core.cpp
config/: adsb_alt_baro.yaml  crypto_eth_usd.yaml  crypto_ticks.yaml  grid_eu_freq.yaml
deploy/: entrypoint.sh
docs/: architecture.md  deploy.md
docs/domain_cards/: adsb_aircraft.md  crypto_ticks.md  grid_frequency.md
docs/eval_runs/: 2026-07-08_haiku_seed42.txt  2026-07-08_sonnet_seed42.txt  2026-07-08_sonnet_seed42_turns12.txt
docs/feeds/: coinbase_ws.md  grid_and_adsb.md
include/core/: message.hpp  pool_allocator.hpp  ring_buffer.hpp
include/detect/: baseline.hpp  conformal.hpp  cusum.hpp  rules.hpp
include/feed/: adsb.hpp  coinbase.hpp  gridradar.hpp  handler.hpp
include/replay/: checksum.hpp  fault_injector.hpp  record_format.hpp  recorder.hpp  replayer.hpp
python/: requirements.txt
python/agent/: evaluate.py  run_eval.py  test_evaluate.py  test_tools.py  test_triage.py  tools.py  triage.py
python/api/: app.py  engine.py  live.py  serve.py  test_api.py  test_deploy.py
python/research/: README.md  bocpd.py  compare_cusum.py  test_bocpd.py
python/tests/: test_bindings.py
src/bindings/: CMakeLists.txt  bindings.cpp
src/feed/: CMakeLists.txt  coinbase_daemon_main.cpp  coinbase_live_main.cpp
tests/: CMakeLists.txt
tests/core/: test_hot_path_allocation.cpp  test_message.cpp  test_pool_allocator.cpp  test_ring_buffer.cpp
tests/detect/: test_baseline.cpp  test_conformal.cpp  test_cusum.cpp  test_detection_delay.cpp  test_false_alarm_rate.cpp  test_rules.cpp
tests/detect/fixtures/: bad_bounds_rule.yaml  good_rule.yaml  missing_field_rule.yaml
tests/feed/: fixture_utils.hpp  test_adsb.cpp  test_coinbase_parse.cpp  test_end_to_end.cpp  test_gap_detection.cpp  test_gridradar.cpp  test_reconnect.cpp
tests/feed/fixtures/: README.md  adsb_fi_raw.jsonl  coinbase_ticker_raw.jsonl  gridradar_synthetic.jsonl
tests/replay/: test_checksum.cpp  test_fault_injector.cpp  test_recorder_replayer.cpp  test_replay_determinism.cpp  test_replay_errors.cpp
